Deep | Test | Fixed textOverflow issue

--- a/apps/web-giddh/src/app/shared/header/components/new-group-account-sidebar/groups-account-sidebar.component.scss
+++ b/apps/web-giddh/src/app/shared/header/components/new-group-account-sidebar/groups-account-sidebar.component.scss
@@ -10,6 +10,11 @@
     min-height: 300px;
 }
 
+.text-overflow {
+    text-overflow: ellipsis;
+    width: 230px;
+}
+
 @media (max-width: 1024px) {
     .virtual-group-list {
         display: table-cell;
